# dotfile-cli

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  main.go
work/: BUILD.bazel  setup.go
work/dotfiles/: .zshrc
work/scripts/: install.sh
